Support to deploy Archive Backend and Archive UI on different Wildfly instances #3114
